--- a/htmlAndCssLessons/Lesson6/index.html
+++ b/htmlAndCssLessons/Lesson6/index.html
@@ -20,7 +20,20 @@
         <div class="box1"></div>
         <div class="box2"></div>
 
-
+<marquee behavior="slide"  Scrollamount=10  direction="left"><img src="img.jpg" width="200" alt=""></marquee>
+<marquee class="marq"
+                 bgcolor="Green" 
+                 direction="left"
+                 loop="">
+            scrollamount: default(6)
+        </marquee>
+        <marquee class="marq"
+                 Scrollamount=10 
+                 bgcolor="Green" 
+                 direction="left" 
+                 loop="">
+            scrollamount: 10
+        </marquee>
 
     
 </body>
